Letter spacing and grammer fixes

--- a/css/style2.css
+++ b/css/style2.css
@@ -22,8 +22,7 @@ body {
 
 h1,
 h2,
-h3,
-h4 {
+h3 {
   line-height: 1.2;
   letter-spacing: -1.5px;
 }
@@ -42,6 +41,8 @@ h3 {
 
 h4 {
   font-size: 2.5rem;
+  letter-spacing: -1;
+  line-height: 1.2;
 }
 
 .header {
